--- a/blocks/add-button/add-button.css
+++ b/blocks/add-button/add-button.css
@@ -13,3 +13,11 @@
 .add-button:hover {
   opacity: 0.6;
 }
+@media screen and (max-width: 880px) {
+  .add-button {
+    margin-top: 36px;
+    grid-template-columns: 282px;
+    width: 100%;
+    background-size: 16px;
+  }
+}
