--- a/blocks/edit-button/edit-button.css
+++ b/blocks/edit-button/edit-button.css
@@ -8,7 +8,17 @@
   height: 24px;
   transition: opacity linear 0.5s;
   cursor: pointer;
+  align-self: flex-end;
+  margin-bottom: 10px;
 }
 .edit-button:hover {
   opacity: 0.6;
+}
+@media screen and (max-width: 880px) {
+  .edit-button {
+    margin-bottom: 6px;
+    grid-area: button;
+    width: 18px;
+    height: 18px;
+  }
 }
