--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -5,5 +5,15 @@
   line-height: 22px;
   letter-spacing: 0em;
   text-align: left;
-  margin: 0;
+  margin: 0 auto;
+}
+@media screen and (max-width: 425px) {
+  .footer__copyright {
+    max-width: calc(100% - 19px * 2);
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 17px;
+    letter-spacing: 0em;
+    text-align: left;
+  }
 }
