--- a/blocks/header/__logo/header__logo.css
+++ b/blocks/header/__logo/header__logo.css
@@ -2,3 +2,10 @@
   max-width: 142px;
   max-height: 33px;
 }
+@media screen and (max-width: 425px) {
+  .header__logo {
+    max-width: 104px;
+    max-height: 25px;
+    margin-left: 27px;
+  }
+}
