--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -3,3 +3,9 @@
   margin: 45px auto 40px;
   border-bottom: solid #545454 1px;
 }
+@media screen and (max-width: 425px) {
+  .header {
+    height: 56px;
+    margin: 28px auto 42px;
+  }
+}
