--- a/blocks/pop-up/pop-up.css
+++ b/blocks/pop-up/pop-up.css
@@ -1,5 +1,5 @@
 .pop-up {
-  display: flex;
+  display: none;
   position: fixed;
   top: 0;
   bottom: 0;
@@ -8,5 +8,4 @@
   z-index: 1;
   align-items: center;
   background-color: rgba(0, 0, 0, 0.5);
-  /* display: none; */
 }
