--- a/blocks/profile/__avatar/profile__avatar.css
+++ b/blocks/profile/__avatar/profile__avatar.css
@@ -4,3 +4,9 @@
   margin: 0;
   margin-right: 30px;
 }
+@media screen and (max-width: 880px) {
+  .profile__avatar {
+    justify-self: center;
+    margin: 0;
+  }
+}
