--- a/blocks/profile/__info/profile__info.css
+++ b/blocks/profile/__info/profile__info.css
@@ -1,7 +1,19 @@
 .profile__info {
   display: grid;
-  grid-template-columns: 1fr;
-  grid-template-rows: 1fr;
+  grid-template-columns: 294px min-content;
+  grid-template-rows: min-content min-content;
   align-items: center;
-  gap: 0;
+  row-gap: 6px;
+  column-gap: 18px;
+}
+@media screen and (max-width: 880px) {
+  .profile__info {
+    grid-template-columns: 18px 1fr 18px;
+    grid-template-areas:
+      "empty name button"
+      "description description description";
+    grid-template-columns: 18px 190px 18px;
+    justify-content: center;
+    column-gap: 10px;
+  }
 }
