--- a/blocks/profile/__name/profile__name.css
+++ b/blocks/profile/__name/profile__name.css
@@ -1,10 +1,18 @@
 .profile__name {
-  display: inline-block;
   font-size: 42px;
   font-weight: 500;
   line-height: 48px;
   letter-spacing: 0em;
   margin: 0;
-  margin-right: 18px;
   margin-top: 24px;
+}
+@media screen and (max-width: 880px) {
+  .profile__name {
+    font-size: 27px;
+    font-weight: 500;
+    line-height: 33px;
+    letter-spacing: 0em;
+    text-align: center;
+    grid-area: name;
+  }
 }
