--- a/pages/index.css
+++ b/pages/index.css
@@ -30,6 +30,7 @@
 @import url(../blocks/footer/__copyright/footer__copyright.css);
 /* pop up*/
 @import url(../blocks/pop-up/pop-up.css);
+@import url(../blocks/pop-up/_opened/popup_opened.css);
 @import url(../blocks/edit-form/edit-form.css);
 @import url(../blocks/edit-form/__title/edit-form__title.css);
 @import url(../blocks/edit-form/__name/edit-form__name.css);
