--- a/blocks/close-button/close-button.css
+++ b/blocks/close-button/close-button.css
@@ -15,3 +15,11 @@
 .close-button:hover {
   opacity: 0.6;
 }
+@media screen and (max-width: 600px) {
+  .close-button {
+    height: 20px;
+    width: 20px;
+    top: -36px;
+    right: 0;
+  }
+}
