fix: pop-up, like-button

--- a/blocks/element/__name/element__name.css
+++ b/blocks/element/__name/element__name.css
@@ -5,7 +5,7 @@
   font-weight: 900;
   line-height: 29px;
   letter-spacing: 0em;
-  margin: 25px 0px 31px 21px;
+  margin: 0;
   overflow: hidden;
   white-space: nowrap;
   text-overflow: ellipsis;
