--- a/blocks/close-button/close-button.css
+++ b/blocks/close-button/close-button.css
@@ -5,6 +5,7 @@
   width: 32px;
   background-position: center;
   background-size: contain;
+  background-repeat: no-repeat;
   border: 0;
   top: -32px;
   right: -40px;
