--- a/blocks/element/__image/element__image.css
+++ b/blocks/element/__image/element__image.css
@@ -1,7 +1,7 @@
 .element__image {
   max-width: 282px;
   max-height: 282px;
-  object-fit: contain;
+  object-fit: cover;
   object-position: center;
   vertical-align: top;
 }
