--- a/blocks/pop-up/pop-up.css
+++ b/blocks/pop-up/pop-up.css
@@ -6,6 +6,7 @@
   right: 0;
   left: 0;
   z-index: 1;
+  justify-items: center;
   align-items: center;
   background-color: rgba(0, 0, 0, 0.5);
 }
