feat: добавлена возможность редактировать профиль

--- a/blocks/edit-form/__name/edit-form__name.css
+++ b/blocks/edit-form/__name/edit-form__name.css
@@ -1,5 +1,6 @@
 .edit-form__name {
   width: calc(100% - 36px * 2);
+  min-width: 238px;
   margin: 0 auto;
   font-size: 14px;
   font-weight: 400;
@@ -7,4 +8,5 @@
   letter-spacing: 0em;
   border: 0;
   border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+  padding-bottom: 8px;
 }
