--- a/blocks/edit-form/__description/edit-form__description.css
+++ b/blocks/edit-form/__description/edit-form__description.css
@@ -1,10 +1,12 @@
 .edit-form__description {
   width: calc(100% - 36px * 2);
-  margin: 30px auto 48px;
+  margin: 30px auto 45px;
+  min-width: 238px;
   font-size: 14px;
   font-weight: 400;
   line-height: 17px;
   letter-spacing: 0em;
   border: 0;
   border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+  padding-bottom: 8px;
 }
