--- a/blocks/submit-button/submit-button.css
+++ b/blocks/submit-button/submit-button.css
@@ -1,12 +1,25 @@
 .submit-button {
   background-color: black;
   width: calc(100% - 36px * 2);
+  min-width: 238px;
   margin: 0 auto 29px;
   color: white;
-  height: 50px;
+  min-height: 50px;
   transition: opacity linear 0.5s;
   cursor: pointer;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 22px;
+  letter-spacing: 0em;
 }
 .submit-button:hover {
   opacity: 0.8;
+}
+@media screen and (max-width: 620px) {
+  .submit-button {
+    font-size: 14px;
+    line-height: 17px;
+    min-height: 46px;
+    margin-bottom: 25px;
+  }
 }
