--- a/pages/index.css
+++ b/pages/index.css
@@ -32,6 +32,7 @@
 /* pop up*/
 @import url(../blocks/pop-up/pop-up.css);
 @import url(../blocks/pop-up/_opened/pop-up_opened.css);
+@import url(../blocks/edit-form/__form/edit-form__form.css);
 @import url(../blocks/edit-form/edit-form.css);
 @import url(../blocks/edit-form/__title/edit-form__title.css);
 @import url(../blocks/edit-form/__name/edit-form__name.css);
