--- a/blocks/pop-up/__close-button/pop-up__close-button.css
+++ b/blocks/pop-up/__close-button/pop-up__close-button.css
@@ -1,5 +1,5 @@
-.pop-up__close-button {
-  background-image: url(../../../images/close-button.svg);
+.close-button {
+  background-image: url(../../images/close-button.svg);
   position: absolute;
   height: 32px;
   width: 32px;
@@ -7,17 +7,17 @@
   background-size: contain;
   background-repeat: no-repeat;
   border: 0;
-  top: -40px;
+  top: -32px;
   right: -40px;
   background-color: rgba(0, 0, 0, 0);
   transition: opacity linear 0.5s;
   cursor: pointer;
 }
-.pop-up__close-button:hover {
+.close-button:hover {
   opacity: 0.6;
 }
-@media screen and (max-width: 600px) {
-  .pop-up__close-button {
+@media screen and (max-width: 620px) {
+  .close-button {
     height: 20px;
     width: 20px;
     top: -36px;
