--- a/blocks/pop-up/__description/pop-up__description.css
+++ b/blocks/pop-up/__description/pop-up__description.css
@@ -1,8 +1,6 @@
-.pop-up__description {
+.edit-form__description {
   width: calc(100% - 36px * 2);
-  margin: 0 auto;
-  padding: 0;
-  padding-bottom: 13px;
+  margin: 30px auto 48px;
   font-size: 14px;
   font-weight: 400;
   line-height: 17px;
