--- a/pages/index.css
+++ b/pages/index.css
@@ -17,8 +17,10 @@
 @import url(../blocks/add-button/add-button.css);
 @import url(../blocks/edit-button/edit-button.css);
 @import url(../blocks/like-button/like-button.css);
+@import url(../blocks/like-button/like-button_active.css);
 @import url(../blocks/submit-button/submit-button.css);
 @import url(../blocks/close-button/close-button.css);
+@import url(../blocks/delete-button/delete-button.css);
 /* elements */
 @import url(../blocks/elemets/elements.css);
 /* element */
@@ -31,6 +33,11 @@
 @import url(../blocks/footer/__copyright/footer__copyright.css);
 /* pop up*/
 @import url(../blocks/pop-up/pop-up.css);
+/*  */
+@import url(../blocks/pop-up/__figure/pop-up__figure.css);
+@import url(../blocks/pop-up/__full-image/pop-up__full-image.css);
+@import url(../blocks/pop-up/__description/pop-up__description.css);
+/*  */
 @import url(../blocks/pop-up/_opened/pop-up_opened.css);
 @import url(../blocks/edit-form/__form/edit-form__form.css);
 @import url(../blocks/edit-form/edit-form.css);
