--- a/blocks/element/element.css
+++ b/blocks/element/element.css
@@ -1,7 +1,7 @@
 .element {
   position: relative;
   max-width: 282px;
-  min-height: 361px;
+  height: 361px;
   border-radius: 10px;
   background-color: white;
   overflow: hidden;
