--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,12 +1,11 @@
 .header {
-  min-height: 74px;
-  box-sizing: border-box;
+  height: 74px;
   margin: 45px auto 40px;
-  border-bottom: solid rgba(84, 84, 84, 0.7) 1px;
+  border-bottom: solid #545454 1px;
 }
-@media screen and (max-width: 425px) {
+@media screen and (max-width: 620px) {
   .header {
-    min-height: 56px;
+    height: 56px;
     margin: 28px auto 42px;
   }
 }
