--- a/blocks/profile/__avatar/profile__avatar.css
+++ b/blocks/profile/__avatar/profile__avatar.css
@@ -1,8 +1,7 @@
 .profile__avatar {
   border-radius: 50%;
-  object-fit: cover;
-  object-position: center;
   max-width: 120px;
+  margin: 0;
   margin-right: 30px;
 }
 @media screen and (max-width: 880px) {
