--- a/blocks/profile/__description/profile__description.css
+++ b/blocks/profile/__description/profile__description.css
@@ -9,7 +9,9 @@
 @media screen and (max-width: 880px) {
   .profile__description {
     font-size: 14px;
+    font-weight: 400;
     line-height: 17px;
+    letter-spacing: 0em;
     text-align: center;
     grid-area: description;
   }
