--- a/blocks/profile/__name/profile__name.css
+++ b/blocks/profile/__name/profile__name.css
@@ -3,12 +3,15 @@
   font-weight: 500;
   line-height: 48px;
   letter-spacing: 0em;
-  margin: 24px 0 0;
+  margin: 0;
+  margin-top: 24px;
 }
 @media screen and (max-width: 880px) {
   .profile__name {
     font-size: 27px;
+    font-weight: 500;
     line-height: 33px;
+    letter-spacing: 0em;
     text-align: center;
     grid-area: name;
   }
