--- a/pages/index.css
+++ b/pages/index.css
@@ -33,11 +33,12 @@
 @import url(../blocks/footer/__copyright/footer__copyright.css);
 /* pop up*/
 @import url(../blocks/pop-up/pop-up.css);
-/*  */
+/* full image */
 @import url(../blocks/pop-up/__figure/pop-up__figure.css);
+@import url(../blocks/pop-up/pop-up_opened-image/pop-up_opened-image.css);
 @import url(../blocks/pop-up/__full-image/pop-up__full-image.css);
 @import url(../blocks/pop-up/__description/pop-up__description.css);
-/*  */
+/* edit form */
 @import url(../blocks/pop-up/_opened/pop-up_opened.css);
 @import url(../blocks/edit-form/__form/edit-form__form.css);
 @import url(../blocks/edit-form/edit-form.css);
