refactor form buttons

--- a/blocks/edit-form/__form/edit-form__form.css
+++ b/blocks/edit-form/__form/edit-form__form.css
@@ -1,5 +1,7 @@
 .edit-form__form {
   margin-left: 36px;
+  width: calc(100% - 36px * 2);
+
 }
 @media screen and (max-width: 620px) {
   .edit-form__form {
