--- a/blocks/edit-form/__description/edit-form__description.css
+++ b/blocks/edit-form/__description/edit-form__description.css
@@ -1,5 +1,7 @@
 .edit-form__description {
   margin: 30px auto 45px;
+  width: 100%;
+  padding: 0;
   min-width: 238px;
   font-size: 14px;
   font-weight: 400;
