--- a/blocks/edit-form/__name/edit-form__name.css
+++ b/blocks/edit-form/__name/edit-form__name.css
@@ -1,6 +1,7 @@
 .edit-form__name {
-  width: calc(100% - 36px * 2);
   min-width: 238px;
+  width: 100%;
+  padding: 0;
   margin: 0 auto;
   font-size: 14px;
   font-weight: 400;
