feat: added validation + modular JS code

--- a/blocks/add-button/add-button.css
+++ b/blocks/add-button/add-button.css
@@ -9,6 +9,7 @@
   align-self: center;
   transition: opacity linear 0.5s;
   cursor: pointer;
+  border-radius: 2px;
 }
 .add-button:hover {
   opacity: 0.6;
