--- a/blocks/submit-button/submit-button.css
+++ b/blocks/submit-button/submit-button.css
@@ -2,7 +2,7 @@
   background-color: black;
   width: 100%;
   min-width: 238px;
-  margin: 0 auto 29px;
+  margin: 15px auto 0;
   color: white;
   min-height: 50px;
   transition: opacity linear 0.5s;
@@ -11,6 +11,7 @@
   font-weight: 400;
   line-height: 22px;
   letter-spacing: 0em;
+  border-radius: 2px;
 }
 .submit-button:hover {
   opacity: 0.8;
@@ -20,6 +21,6 @@
     font-size: 14px;
     line-height: 17px;
     min-height: 46px;
-    margin-bottom: 25px;
+    margin-top: 5px;
   }
 }
