--- a/src/blocks/profile/__avatar/profile__avatar.css
+++ b/src/blocks/profile/__avatar/profile__avatar.css
@@ -1,8 +1,15 @@
 .profile__avatar {
   border-radius: 50%;
-  max-width: 120px;
+  width: 120px;
+  height: 120px;
+  object-fit: cover;
+  object-position: center;
   margin: 0;
-  margin-right: 30px;
+  cursor: pointer;
+  transition: 0.5s opacity ease-in-out;
+}
+.profile__avatar:hover{
+  opacity: 0.2;
 }
 @media screen and (max-width: 880px) {
   .profile__avatar {
