--- a/src/blocks/submit-button/submit-button.css
+++ b/src/blocks/submit-button/submit-button.css
@@ -2,7 +2,8 @@
   background-color: black;
   width: 100%;
   min-width: 238px;
-  margin: 15px auto 0;
+  max-width: 358px;
+  margin: 15px auto 36px;
   color: white;
   min-height: 50px;
   transition: opacity linear 0.5s;
