--- a/main.css
+++ b/main.css
@@ -15,7 +15,7 @@
 .likes-container{display:flex;flex-direction:column}
 .like-button_active{background-image:url(35948469632d0421d697.svg)}
 .like-counter{color:#000;margin:0;text-align:center}
-.submit-button{background-color:#000;border-radius:2px;color:#fff;cursor:pointer;font-size:18px;font-weight:400;letter-spacing:0;line-height:22px;margin:15px auto 36px;max-width:358px;min-height:50px;min-width:238px;transition:opacity .5s linear;width:100%}.submit-button:hover{opacity:.8}@media screen and (max-width:620px){.submit-button{font-size:14px;line-height:17px;margin-top:5px;min-height:46px}}
+.submit-button{background-color:#000;border-radius:2px;color:#fff;cursor:pointer;font-size:18px;font-weight:400;letter-spacing:0;line-height:22px;margin:0 auto 36px;max-width:358px;min-height:50px;min-width:238px;padding:0;transition:opacity .5s linear;width:100%}.submit-button:hover{opacity:.8}@media screen and (max-width:620px){.submit-button{font-size:14px;line-height:17px;max-width:238px;min-height:46px}}
 .submit-button_inactive{background-color:#fff;color:#000;opacity:.2;transition:color .5s linear;transition:background-color .5s linear}
 .close-button{background-color:transparent;background-image:url(039f1f5203f653b4bacd.svg);background-position:50%;background-repeat:no-repeat;background-size:contain;border:0;cursor:pointer;height:32px;position:absolute;right:-40px;top:-40px;transition:opacity .5s linear;width:32px}.close-button:hover{opacity:.6}@media screen and (max-width:620px){.close-button{height:20px;right:0;top:-36px;width:20px}}@media (orientation:landscape) and (max-height:500px){.close-button{height:20px;right:-36px;top:0;width:20px}}
 .delete-button{background-color:transparent;background-image:url(ce3b64935accf9b8212e.svg);background-position:50%;background-repeat:no-repeat;background-size:contain;border:0;cursor:pointer;height:18px;position:absolute;right:20px;top:20px;transition:opacity .5s linear;width:19px}.delete-button:hover{opacity:.6}
@@ -33,8 +33,9 @@
 .pop-up__description{font-size:12px;font-weight:400;letter-spacing:0;line-height:15px;margin:10px 0 0}
 .pop-up_opened{opacity:1;visibility:visible}
 .edit-form__form{margin:0 auto;width:calc(100% - 72px)}@media screen and (max-width:620px){.edit-form__form{margin-left:22px}}
-.edit-form{background-color:#fff;border-radius:10px;display:flex;flex-direction:column;margin:0 auto;position:relative;width:430px}@media screen and (max-width:620px){.edit-form{min-height:352px;width:282px}}
+.edit-form{background-color:#fff;border-radius:10px;display:flex;flex-direction:column;margin:0 auto;position:relative;width:430px}@media screen and (max-width:620px){.edit-form{width:282px}}
 .edit-form__title{color:#000;font-size:24px;font-weight:900;letter-spacing:0;line-height:29px;margin:34px 0 50px 36px;text-align:left}@media screen and (max-width:620px){.edit-form__title{font-size:18px;line-height:22px;margin:25px 22px 50px}}
+.edit-form__title_type_confirm-delete{margin-bottom:38px}
 .edit-form__input{border:0;border-bottom:1px solid rgba(0,0,0,.2);font-size:14px;font-weight:400;letter-spacing:0;line-height:17px;margin:0;min-width:238px;padding-bottom:8px;width:100%}
 .edit-form__error-message{color:red;font-size:12px;font-weight:400;letter-spacing:0;line-height:14px}
 .edit-form__container{min-height:65px}@media screen and (max-width:620px){.edit-form__container{min-height:85px}}
