--- a/src/blocks/submit-button/submit-button.css
+++ b/src/blocks/submit-button/submit-button.css
@@ -3,7 +3,8 @@
   width: 100%;
   min-width: 238px;
   max-width: 358px;
-  margin: 15px auto 36px;
+  margin: 0 auto 36px;
+  padding: 0;
   color: white;
   min-height: 50px;
   transition: opacity linear 0.5s;
@@ -19,9 +20,9 @@
 }
 @media screen and (max-width: 620px) {
   .submit-button {
+    max-width: 238px;
     font-size: 14px;
     line-height: 17px;
     min-height: 46px;
-    margin-top: 5px;
   }
 }
