--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -52,7 +52,9 @@
 @import url(../blocks/edit-form/__form/edit-form__form.css);
 @import url(../blocks/edit-form/edit-form.css);
 @import url(../blocks/edit-form/__title/edit-form__title.css);
+@import url(../blocks/edit-form/__title/_type/edit-form__title_type_confirm-delete.css);
 @import url(../blocks/edit-form/__input/edit-form__input.css);
 @import url(../blocks/edit-form/__error-message/edit-form__error-message.css);
 @import url(../blocks/edit-form/__container/edit-form__container.css);
 @import url(../blocks/edit-form/__input/_invalid/edit-form__input_invalid.css);
+
